--- a/res/layout/activity_accounts.xml
+++ b/res/layout/activity_accounts.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     tools:context=".AccountsActivity" >
 
-    <ListView
+    <ExpandableListView
         android:id="@+id/accounts_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" >
-    </ListView>
+    </ExpandableListView>
 
 </RelativeLayout>
