--- a/res/layout/list_element.xml
+++ b/res/layout/list_element.xml
@@ -1,6 +1,24 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_height="wrap_content"
-	android:layout_width="wrap_content"
-	android:textSize="32sp"
-	android:id="@+id/account_listing"
-	/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
+	<TextView 
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:textSize="32sp"
+		android:id="@+id/account_name"
+		/>
+	<TextView 
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:textSize="20sp"
+	    android:id="@+id/account_total"
+	    />
+	
+	<TextView
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:textSize="16sp"
+	    android:id="@+id/account_arrow"
+    />
+</LinearLayout>
